--- a/_config.yml
+++ b/_config.yml
@@ -25,24 +25,24 @@ author:
   name             : "Zhi-Bo Liu"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student in CS at XJTU"
-  location         : "Xi'an"
-  employer         : "Xi'an Jiaotong Univ."
+  location         : # URL "Xi'an"
+  employer         : "Xi'an Jiaotong University"
   uri              : # URL
   email            : "zhiboliu@stu.xjtu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # URL "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  orcid            : # URL "http://orcid.org/yourorcidurl"
+  pubmed           : # URL "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : # Username "academicpages"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
