--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,12 +11,15 @@ main:
     
   # - title: "Portfolio"
   #   url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+     
   - title: "CV"
     url: /cv/
+
+  - title: "Blog Posts"
+    url: /year-archive/
+
+  - title: "AI Chair"
+    url: /ai-chair/
     
   # - title: "Guide"
   #   url: /markdown/
