init file, add chair.md & images, change chair.md's image path

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
     url: /year-archive/
 
   - title: "AI Chair"
-    url: /ai-chair/
+    url: /chair/
     
   # - title: "Guide"
   #   url: /markdown/
