add criteriaForAuthorship.pdf, create route /authorship, add navigation link on index page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,8 @@ main:
   - title: "AI Chair"
     url: /chair/
     
+  - title: "Authorship"
+    url: /authorship/
+    
   # - title: "Guide"
   #   url: /markdown/
